--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   <title>Michelle Zheng's Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="http://docs.google.com/gview?url=https://github.com/mzheng8/Resume/raw/main/Michelle%20Zheng%20-%20Resume.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://github.com/mzheng8/Resume/blob/main/Zheng%2C%20Michelle%20-%20Resume%20.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
   </body>
 </html>
